--- a/hw12_13_14_15_16_calendar/configs/config.yaml
+++ b/hw12_13_14_15_16_calendar/configs/config.yaml
@@ -1,5 +1,10 @@
-[logger]
-level = "INFO"
+server:
+  host: 127.0.0.1
+  port: 8081
 
-# TODO
-# ...
+logger:
+  level: DEBUG
+
+storage:
+  type: postgres # or memory
+  timeout: 3
