--- a/hw12_13_14_15_16_calendar/deployments/docker-compose.yaml
+++ b/hw12_13_14_15_16_calendar/deployments/docker-compose.yaml
@@ -1,1 +1,17 @@
 version: "3"
+
+services:
+  postgres:
+    image: postgres:17.5
+    environment:
+      POSTGRES_HOST: ${POSTGRES_HOST:-localhost} # если переменная не задана, будет 'localhost'
+      POSTGRES_DB: ${POSTGRES_DB:-otus} # имя БД
+      POSTGRES_USER: ${POSTGRES_USER:-user} # пользователь
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-password} # пароль
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_otus_data:/var/lib/postgresql/data
+
+volumes:
+  postgres_otus_data:
