HW14 in process

--- a/hw12_13_14_15_16_calendar/.env.dist
+++ b/hw12_13_14_15_16_calendar/.env.dist
@@ -2,3 +2,6 @@ GOOSE_DRIVER=postgres
 GOOSE_DBSTRING=postgres://user:password@localhost:5432/otus
 GOOSE_MIGRATION_DIR=./migrations
 GOOSE_TABLE=goose_migrations
+
+RABBITMQ_USER=admin
+RABBITMQ_PASSWORD=admin
