--- a/hw12_13_14_15_16_calendar/deployments/docker-compose.yaml
+++ b/hw12_13_14_15_16_calendar/deployments/docker-compose.yaml
@@ -3,6 +3,7 @@ version: "3"
 services:
   postgres:
     image: postgres:17.5
+    container_name: otus-postgres
     environment:
       POSTGRES_HOST: ${POSTGRES_HOST:-localhost} # если переменная не задана, будет 'localhost'
       POSTGRES_DB: ${POSTGRES_DB:-otus} # имя БД
@@ -13,5 +14,22 @@ services:
     volumes:
       - postgres_otus_data:/var/lib/postgresql/data
 
+  rabbitmq:
+    image: rabbitmq:3-management
+    container_name: otus-rabbitmq
+    hostname: rabbitmq
+    restart: unless-stopped
+    ports:
+      - "5672:5672" # AMQP порт для клиентов
+      - "15672:15672" # Web UI порт
+    environment:
+      RABBITMQ_DEFAULT_USER: ${RABBITMQ_USER:-admin}
+      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASSWORD:-admin}
+    volumes:
+      - rabbitmq_otus_data:/var/lib/rabbitmq
+      - rabbitmq_otus_logs:/var/log/rabbitmq
+
 volumes:
   postgres_otus_data:
+  rabbitmq_otus_data:
+  rabbitmq_otus_logs:
