HW14 is completed

--- a/hw12_13_14_15_16_calendar/configs/config-scheduler.yaml
+++ b/hw12_13_14_15_16_calendar/configs/config-scheduler.yaml
@@ -3,6 +3,9 @@ RabbitMQ:
   Password: admin
   Host: localhost
   Port: 5672
+  ExchangeName: events
+  RoutingKey: event.key
+  ScanInterval: 3
 
 DB:
   Host: localhost
