--- a/hw12_13_14_15_16_calendar/configs/config-sender.yaml
+++ b/hw12_13_14_15_16_calendar/configs/config-sender.yaml
@@ -3,6 +3,9 @@ RabbitMQ:
   Password: admin
   Host: localhost
   Port: 5672
+  ExchangeName: events
+  QueueName: events_queue
+  RoutingKey: event.*
   
 Logger:
   Level: DEBUG
