--- a/.golangci.yml
+++ b/.golangci.yml
@@ -22,12 +22,16 @@ linters-settings:
           - go.uber.org/zap
           - github.com/spf13/viper
           - github.com/jmoiron/sqlx
+          - github.com/rabbitmq/amqp091-go
           - github.com/Sapronovps/OtusGolangProfessional/hw12_13_14_15_calendar/internal/server/grpc
           - github.com/Sapronovps/OtusGolangProfessional/hw12_13_14_15_calendar/internal/storage
           - github.com/Sapronovps/OtusGolangProfessional/hw12_13_14_15_calendar/internal/server/http
           - github.com/Sapronovps/OtusGolangProfessional/hw12_13_14_15_calendar/internal/model
           - github.com/Sapronovps/OtusGolangProfessional/hw12_13_14_15_calendar/internal/logger
           - github.com/Sapronovps/OtusGolangProfessional/hw12_13_14_15_calendar/internal/app
+          - github.com/Sapronovps/OtusGolangProfessional/hw12_13_14_15_calendar/internal/queue
+          - github.com/Sapronovps/OtusGolangProfessional/hw12_13_14_15_calendar/internal/scheduler
+          - github.com/Sapronovps/OtusGolangProfessional/hw12_13_14_15_calendar/internal/sender
       Test:
         files:
           - $test
