--- a/hw12_13_14_15_16_calendar/Makefile
+++ b/hw12_13_14_15_16_calendar/Makefile
@@ -15,6 +15,8 @@ build-scheduler:
 build-sender:
 	go build -v -o $(BIN_SENDER) -ldflags "$(LDFLAGS)" ./cmd/calendar_sender
 
+build-all: build build-scheduler build-scheduler
+
 run: build
 	$(BIN) -config ./configs
 
