--- a/hw12_13_14_15_16_calendar/configs/config.yaml
+++ b/hw12_13_14_15_16_calendar/configs/config.yaml
@@ -1,8 +1,8 @@
 Server:
   Host: 127.0.0.1
-  Port: 8081
+  Port: 8082
   AddressGrpc: ":50051"
-  IsHTTP: false
+  IsHTTP: true
 
 Logger:
   Level: DEBUG
