--- a/hw12_13_14_15_16_calendar/deployments/docker-compose.yaml
+++ b/hw12_13_14_15_16_calendar/deployments/docker-compose.yaml
@@ -3,14 +3,14 @@ version: "3"
 services:
   calendar:
     build:
-      context: ..
+      context: ../
       dockerfile: build/calendar/Dockerfile
     container_name: otus-calendar
     environment:
       DB_HOST: ${POSTGRES_HOST:-postgres}
-      SERVER_PORT: 8083
+      SERVER_PORT: 8080
     ports:
-      - "8083:8083"
+      - "8080:8080"
     depends_on:
       postgres:
         condition: service_healthy
